# LAMDA-TALENT

./: .gitignore  CITATION.bib  LICENSE  MANIFEST.in  default_para.json  example_cls.sh  example_reg.sh  opt_space.json  pyproject.toml  readme.md  requirements.txt  setup.py  train_model_classical.py  train_model_deep.py
LAMDA-TALENT/: example_cls.sh  train_model_classical.py  train_model_deep.py
LAMDA-TALENT/model/: utils.py
LAMDA_TALENT/: __init__.py  requirements.txt  train_model_classical.py
LAMDA_TALENT/model/: utils.py
LAMDA_TALENT/scikit-TALENT/: data_loader.py  optuna_tune.py  readme.md  talent_classifier.py  talent_regressor.py
TALENT/: __init__.py
TALENT/model/: utils.py
TabBench/: default_para.json  opt_space.json  train_model_classical.py  train_model_deep.py
TabBench/configs/: classical_configs.json  deep_configs.json
TabBench/model/: utils.py
docs/: acknowledgements.rst  benchmark_datasets.rst  conf.py  dependencies.rst  experimental_results.rst  index.rst  methods.rst  tutorials.rst
docs/api/: data.rst  method_base.rst  utils.rst
example_datasets/: dataset_names.py  readme.md
example_datasets/bank/: C_test.npy  C_train.npy  C_val.npy  N_test.npy  N_train.npy  N_val.npy  info.json  y_test.npy  y_train.npy  y_val.npy
example_datasets/cpu_act/: N_test.npy  N_train.npy  N_val.npy  info.json  y_test.npy  y_train.npy  y_val.npy
example_datasets/mfeat-factors/: N_test.npy  N_train.npy  (+5 more)
model/: utils.py
results/: cls_bin.md  cls_multi.md  readme.md  regression.md  results.html
test/: example_reg.sh  train_model_classical.py
(+462 files in other folders)
