[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "TALENT"
authors = [{name = "Siyang Liu", email = "lsy00043@gmail.com"}]
dynamic = ["version", "description"]

dependencies = [
    "tqdm==4.66.4",
    "category_encoders==2.6.3",
    "delu==0.0.23",
    "einops==0.8.0",
    "numpy==1.26.4",
    "optuna==3.6.1",
    "pandas==2.2.2",
    "qhoptim==1.1.0",
    "Requests==2.31.0",
    "scikit_learn==1.4.2",
    "scipy==1.13.0",
    "torch==2.0.1",
]